Update Firebase database URL in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <script>
     // 1. FIREBASE CONFIG
-    const firebaseConfig = { databaseURL: "https://alfatedrezky-dotcom.github.io/emas_murni-xau/" };
+    const firebaseConfig = { databaseURL: "https://emas_murni-xau.firebaseio.com/live_monitor.json" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
