Update title and signal messages in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMC ULTRA-PRECISION | CANDLESTICK ENGINE</title>
+    <title>XAUUSD QUANTUM | LIVE SYNC</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -15,7 +15,7 @@
         .panel { background: var(--panel); border: 1px solid #1a1a1a; border-radius: 12px; padding: 15px; position: relative; }
         #chart-container { height: 400px; width: 100%; margin-top: 15px; border-radius: 8px; overflow: hidden; background: #000; }
         #price { font-size: 50px; font-weight: 900; text-align: center; margin: 5px 0; font-family: 'Courier New'; color: var(--gold); }
-        .signal-banner { padding: 15px; border-radius: 8px; font-size: 18px; font-weight: bold; text-align: center; border: 1px solid #333; margin-bottom: 10px; transition: 0.3s; }
+        .signal-banner { padding: 15px; border-radius: 8px; font-size: 18px; font-weight: bold; text-align: center; border: 1px solid #333; margin-bottom: 10px; }
         .buy { color: var(--neon); border-color: var(--neon); background: rgba(0,255,136,0.05); }
         .sell { color: var(--danger); border-color: var(--danger); background: rgba(255,68,68,0.05); }
         input { background: #111; border: 1px solid #333; color: #fff; padding: 10px; width: 100%; margin-bottom: 10px; border-radius: 5px; box-sizing: border-box; }
@@ -38,7 +38,7 @@
 
     <div class="panel">
         <div id="price">0000.00</div>
-        <div id="signal-box" class="signal-banner">WAITING FOR TERMUX FEED...</div>
+        <div id="signal-box" class="signal-banner">CONNECTING TO TERMUX...</div>
         <div id="chart-container"></div>
     </div>
 
@@ -61,18 +61,18 @@
 </div>
 
 <script>
-    // 1. KONFIGURASI FIREBASE - SESUAIKAN DENGAN LOG TERMUX ANDA
+    // 1. URL DISAMAKAN DENGAN LOG TERMUX ANDA
     const firebaseConfig = { 
         databaseURL: "https://emas_murni-xau-default-rtdb.firebaseio.com" 
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // 2. INISIALISASI GRAFIK CANDLESTICK (TRADINGVIEW STYLE)
+    // 2. INISIALISASI GRAFIK CANDLESTICK
     const chart = LightweightCharts.createChart(document.getElementById('chart-container'), {
-        layout: { backgroundColor: '#0d0d0d', textColor: '#d1d4dc' },
-        grid: { vertLines: { color: '#1a1a1a' }, horzLines: { color: '#1a1a1a' } },
-        timeScale: { timeVisible: true, secondsVisible: true, borderColor: '#333' }
+        layout: { backgroundColor: '#000', textColor: '#d1d4dc' },
+        grid: { vertLines: { color: '#111' }, horzLines: { color: '#111' } },
+        timeScale: { timeVisible: true, secondsVisible: true }
     });
     const candleSeries = chart.addCandlestickSeries({
         upColor: '#00ff88', downColor: '#ff4444', borderDownColor: '#ff4444',
@@ -80,23 +80,23 @@
     });
 
     let currentCandle = { open: null, high: null, low: null, close: null, time: null };
-    let financeData = JSON.parse(localStorage.getItem('jurnal_v9')) || [];
+    let financeData = JSON.parse(localStorage.getItem('jurnal_v10')) || [];
     let lastPrice = 0;
     let myChart;
 
-    // 3. SINKRONISASI REAL-TIME DARI TERMUX
+    // 3. SINKRONISASI REAL-TIME (DATA DARI PYTHON)
     db.ref('live_monitor').on('value', (snapshot) => {
         const data = snapshot.val();
         if(data) {
             const price = data.price;
             const time = Math.floor(data.timestamp);
             
-            // Update Angka Utama
+            // Update Harga Besar
             const priceEl = document.getElementById('price');
             priceEl.innerText = price.toFixed(2);
             priceEl.style.color = price > lastPrice ? '#00ff88' : '#ff4444';
 
-            // Logika Pembentukan Candle M1
+            // Pembentukan Candle Otomatis
             const candleTime = Math.floor(time / 60) * 60;
             if (!currentCandle.time || candleTime > currentCandle.time) {
                 currentCandle = { open: price, high: price, low: price, close: price, time: candleTime };
@@ -107,7 +107,7 @@
             }
             candleSeries.update(currentCandle);
 
-            // Update Sinyal Banner
+            // Update Sinyal
             const side = price > lastPrice ? 'BUY' : 'SELL';
             const box = document.getElementById('signal-box');
             box.innerText = `M1 ${side} CONFIRMED`;
@@ -115,17 +115,15 @@
             
             lastPrice = price;
         }
-    }, (err) => {
-        document.getElementById('signal-box').innerText = "FIREBASE ERROR: CHECK RULES";
     });
 
-    // 4. SISTEM MANAJEMEN KEUANGAN (JURNAL)
+    // 4. SISTEM KEUANGAN (JURNAL GMAIL)
     function addFinance(type) {
         const desc = document.getElementById('f-desc').value;
         const amt = parseFloat(document.getElementById('f-amt').value);
         if(!desc || !amt) return;
         financeData.push({ date: new Date().toLocaleString(), desc, amt, type });
-        localStorage.setItem('jurnal_v9', JSON.stringify(financeData));
+        localStorage.setItem('jurnal_v10', JSON.stringify(financeData));
         document.getElementById('f-desc').value = '';
         document.getElementById('f-amt').value = '';
         renderFinance();
@@ -154,14 +152,12 @@
         });
     }
 
-    // 5. FITUR GMAIL
     function kirimKeGmail() {
-        let report = "--- BUKU JURNAL KEUANGAN DIGITAL ---\n";
+        let report = "--- LAPORAN JURNAL KEUANGAN ---\n";
         financeData.forEach((item, i) => {
             report += `${i+1}. ${item.date} | ${item.desc} | Rp ${item.amt.toLocaleString()} (${item.type})\n`;
         });
-        report += `\nSALDO AKHIR: ${document.getElementById('total-balance').innerText}`;
-        window.location.href = `mailto:rezkyalfayed56@gmail.com?subject=Laporan Jurnal Bulanan&body=${encodeURIComponent(report)}`;
+        window.location.href = `mailto:rezkyalfayed56@gmail.com?subject=Jurnal Bulanan&body=${encodeURIComponent(report)}`;
     }
 
     renderFinance();
