--- a/index.html
+++ b/index.html
@@ -2,165 +2,112 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XAUUSD QUANTUM | LIVE SYNC</title>
+    <title>SMC QUANTUM | LIVE ENGINE</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
     <style>
-        :root { --neon: #00ff88; --danger: #ff4444; --gold: #ffd700; --panel: #0d0d0d; --bg: #020202; }
-        body { background: var(--bg); color: #eee; font-family: 'Inter', sans-serif; margin: 0; padding: 15px; overflow-x: hidden; }
-        .grid { display: grid; grid-template-columns: 320px 1fr 320px; gap: 15px; }
-        .panel { background: var(--panel); border: 1px solid #1a1a1a; border-radius: 12px; padding: 15px; position: relative; }
-        #chart-container { height: 400px; width: 100%; margin-top: 15px; border-radius: 8px; overflow: hidden; background: #000; }
-        #price { font-size: 50px; font-weight: 900; text-align: center; margin: 5px 0; font-family: 'Courier New'; color: var(--gold); }
-        .signal-banner { padding: 15px; border-radius: 8px; font-size: 18px; font-weight: bold; text-align: center; border: 1px solid #333; margin-bottom: 10px; }
-        .buy { color: var(--neon); border-color: var(--neon); background: rgba(0,255,136,0.05); }
-        .sell { color: var(--danger); border-color: var(--danger); background: rgba(255,68,68,0.05); }
-        input { background: #111; border: 1px solid #333; color: #fff; padding: 10px; width: 100%; margin-bottom: 10px; border-radius: 5px; box-sizing: border-box; }
-        .btn { width: 100%; padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; margin-bottom: 5px; }
-        .btn-mail { background: var(--gold); color: #000; margin-top: 15px; }
-        .scroll { height: 180px; overflow-y: auto; font-size: 11px; scrollbar-width: thin; }
-        .ledger-item { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px solid #111; }
-        @media (max-width: 1000px) { .grid { grid-template-columns: 1fr; } }
+        :root { --neon: #00ff88; --danger: #ff4444; --gold: #ffd700; --panel: #111; }
+        body { background: #000; color: #eee; font-family: sans-serif; margin: 0; padding: 15px; }
+        .grid { display: grid; grid-template-columns: 300px 1fr 300px; gap: 10px; }
+        .panel { background: var(--panel); border: 1px solid #222; border-radius: 8px; padding: 15px; }
+        #price { font-size: 50px; text-align: center; font-weight: bold; margin: 10px 0; }
+        .signal { padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; margin-bottom: 10px; font-size: 20px; }
+        .buy { background: rgba(0,255,136,0.2); color: var(--neon); border: 1px solid var(--neon); }
+        .sell { background: rgba(255,68,68,0.2); color: var(--danger); border: 1px solid var(--danger); }
+        input { background: #000; border: 1px solid #333; color: #fff; width: 100%; padding: 8px; margin-bottom: 5px; box-sizing: border-box; }
+        button { width: 100%; padding: 10px; font-weight: bold; cursor: pointer; border: none; border-radius: 4px; }
+        .scroll { height: 150px; overflow-y: auto; font-size: 12px; border-top: 1px solid #222; margin-top: 10px; }
     </style>
 </head>
 <body>
 
 <div class="grid">
     <div class="panel">
-        <div style="font-size: 10px; color: #555; letter-spacing: 2px;">LEDGER ANALYTICS</div>
-        <div id="total-balance" style="font-size: 28px; font-weight: bold; color: var(--gold); margin: 10px 0;">Rp 0</div>
-        <canvas id="expenseChart" style="max-height: 150px;"></canvas>
-        <button class="btn btn-mail" onclick="kirimKeGmail()">KIRIM JURNAL KE GMAIL</button>
+        <div style="color:var(--gold)">LEDGER ANALYTICS</div>
+        <h2 id="balance">Rp 0</h2>
+        <input type="text" id="desc" placeholder="Keterangan">
+        <input type="number" id="amt" placeholder="Jumlah (Rp)">
+        <button style="background:var(--neon); margin-bottom:5px" onclick="addTrans('IN')">INCOME (+)</button>
+        <button style="background:var(--danger)" onclick="addTrans('OUT')">EXPENSE (-)</button>
+        <div id="hist" class="scroll"></div>
     </div>
 
     <div class="panel">
         <div id="price">0000.00</div>
-        <div id="signal-box" class="signal-banner">CONNECTING TO TERMUX...</div>
-        <div id="chart-container"></div>
+        <div id="sig-box" class="signal">SYNCING ENGINE...</div>
+        <div id="chart" style="height: 350px;"></div>
     </div>
 
     <div class="panel">
-        <div style="font-size: 10px; color: #555; margin-bottom:10px;">M1 SIGNAL LOG</div>
-        <div id="signal-log" class="scroll"></div>
-        <div style="margin-top: 20px;">
-            <div style="font-size: 9px; color: #555; margin-bottom: 5px;">RECORD TRANSACTION</div>
-            <input type="text" id="f-desc" placeholder="Keterangan">
-            <input type="number" id="f-amt" placeholder="Jumlah (Rp)">
-            <button class="btn" style="background:var(--neon); color:#000" onclick="addFinance('IN')">RECORD INCOME (+)</button>
-            <button class="btn" style="background:var(--danger); color:#fff" onclick="addFinance('OUT')">RECORD EXPENSE (-)</button>
-        </div>
+        <div style="color:var(--gold)">M1 SIGNAL LOG</div>
+        <div id="log" class="scroll" style="height: 400px;"></div>
     </div>
 </div>
 
-<div class="panel" style="margin-top: 15px;">
-    <div style="font-size: 10px; color: #555; margin-bottom:10px;">IMMUTABLE TRANSACTION HISTORY</div>
-    <div id="ledger-history" class="scroll" style="height: 150px;"></div>
-</div>
-
 <script>
-    // 1. URL DISAMAKAN DENGAN LOG TERMUX ANDA
-    const firebaseConfig = { 
-        databaseURL: "https://emas_murni-xau-default-rtdb.firebaseio.com" 
-    };
-    firebase.initializeApp(firebaseConfig);
+    // URL DISAMAKAN DENGAN TERMUX ANDA
+    const conf = { databaseURL: "https://emas_murni-xau-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(conf);
     const db = firebase.database();
 
-    // 2. INISIALISASI GRAFIK CANDLESTICK
-    const chart = LightweightCharts.createChart(document.getElementById('chart-container'), {
-        layout: { backgroundColor: '#000', textColor: '#d1d4dc' },
-        grid: { vertLines: { color: '#111' }, horzLines: { color: '#111' } },
-        timeScale: { timeVisible: true, secondsVisible: true }
+    // Chart Setup
+    const chart = LightweightCharts.createChart(document.getElementById('chart'), {
+        layout: { backgroundColor: '#111', textColor: '#d1d4dc' },
+        grid: { vertLines: { color: '#222' }, horzLines: { color: '#222' } }
     });
-    const candleSeries = chart.addCandlestickSeries({
-        upColor: '#00ff88', downColor: '#ff4444', borderDownColor: '#ff4444',
-        borderUpColor: '#00ff88', wickDownColor: '#ff4444', wickUpColor: '#00ff88'
-    });
+    const candle = chart.addCandlestickSeries({ upColor: '#00ff88', downColor: '#ff4444' });
 
-    let currentCandle = { open: null, high: null, low: null, close: null, time: null };
-    let financeData = JSON.parse(localStorage.getItem('jurnal_v10')) || [];
-    let lastPrice = 0;
-    let myChart;
+    let lastP = 0;
+    let records = JSON.parse(localStorage.getItem('my_fin_v2')) || [];
 
-    // 3. SINKRONISASI REAL-TIME (DATA DARI PYTHON)
-    db.ref('live_monitor').on('value', (snapshot) => {
-        const data = snapshot.val();
-        if(data) {
-            const price = data.price;
-            const time = Math.floor(data.timestamp);
+    // REAL-TIME SYNC ENGINE
+    db.ref('live_monitor').on('value', (s) => {
+        const data = s.val();
+        if(!data) return;
+
+        const p = data.price;
+        const priceEl = document.getElementById('price');
+        priceEl.innerText = p.toFixed(2);
+        priceEl.style.color = p > lastP ? '#00ff88' : '#ff4444';
+
+        // AUTO-SIGNAL LOGIC
+        if(lastP > 0 && p !== lastP) {
+            const side = p > lastP ? 'BUY' : 'SELL';
+            const sigBox = document.getElementById('sig-box');
+            sigBox.innerText = side + " CONFIRMED";
+            sigBox.className = "signal " + side.toLowerCase();
             
-            // Update Harga Besar
-            const priceEl = document.getElementById('price');
-            priceEl.innerText = price.toFixed(2);
-            priceEl.style.color = price > lastPrice ? '#00ff88' : '#ff4444';
-
-            // Pembentukan Candle Otomatis
-            const candleTime = Math.floor(time / 60) * 60;
-            if (!currentCandle.time || candleTime > currentCandle.time) {
-                currentCandle = { open: price, high: price, low: price, close: price, time: candleTime };
-            } else {
-                currentCandle.close = price;
-                if (price > currentCandle.high) currentCandle.high = price;
-                if (price < currentCandle.low) currentCandle.low = price;
-            }
-            candleSeries.update(currentCandle);
-
-            // Update Sinyal
-            const side = price > lastPrice ? 'BUY' : 'SELL';
-            const box = document.getElementById('signal-box');
-            box.innerText = `M1 ${side} CONFIRMED`;
-            box.className = `signal-banner ${side.toLowerCase()}`;
-            
-            lastPrice = price;
+            const log = document.getElementById('log');
+            log.innerHTML = `<div>[${new Date().toLocaleTimeString()}] ${side} @ ${p}</div>` + log.innerHTML;
         }
+
+        candle.update({ time: Math.floor(data.timestamp), open: p, high: p, low: p, close: p });
+        lastP = p;
     });
 
-    // 4. SISTEM KEUANGAN (JURNAL GMAIL)
-    function addFinance(type) {
-        const desc = document.getElementById('f-desc').value;
-        const amt = parseFloat(document.getElementById('f-amt').value);
-        if(!desc || !amt) return;
-        financeData.push({ date: new Date().toLocaleString(), desc, amt, type });
-        localStorage.setItem('jurnal_v10', JSON.stringify(financeData));
-        document.getElementById('f-desc').value = '';
-        document.getElementById('f-amt').value = '';
-        renderFinance();
+    // FINANCE SYSTEM
+    function addTrans(type) {
+        const d = document.getElementById('desc').value;
+        const a = parseFloat(document.getElementById('amt').value);
+        if(!d || !a) return alert("Isi data!");
+
+        records.push({ d, a, type, t: new Date().toLocaleString() });
+        localStorage.setItem('my_fin_v2', JSON.stringify(records));
+        render();
     }
 
-    function renderFinance() {
-        let total = 0, tin = 0, tout = 0;
-        const hist = document.getElementById('ledger-history');
-        hist.innerHTML = '';
-        financeData.forEach(item => {
-            if(item.type === 'IN') { total += item.amt; tin += item.amt; }
-            else { total -= item.amt; tout += item.amt; }
-            hist.innerHTML = `<div class="ledger-item"><span>${item.date} | ${item.desc}</span><span style="color:${item.type==='IN'?'#00ff88':'#ff4444'}">${item.type==='IN'?'+':'-'} ${item.amt.toLocaleString()}</span></div>` + hist.innerHTML;
+    function render() {
+        let total = 0;
+        const h = document.getElementById('hist');
+        h.innerHTML = '';
+        records.forEach(i => {
+            total += (i.type === 'IN' ? i.a : -i.a);
+            h.innerHTML = `<div>${i.d}: Rp ${i.a.toLocaleString()} (${i.type})</div>` + h.innerHTML;
         });
-        document.getElementById('total-balance').innerText = `Rp ${total.toLocaleString()}`;
-        updateChart(tin, tout);
+        document.getElementById('balance').innerText = "Rp " + total.toLocaleString();
     }
-
-    function updateChart(tin, tout) {
-        const ctx = document.getElementById('expenseChart').getContext('2d');
-        if (myChart) myChart.destroy();
-        myChart = new Chart(ctx, {
-            type: 'doughnut',
-            data: { labels: ['In', 'Out'], datasets: [{ data: [tin, tout], backgroundColor: ['#00ff88', '#ff4444'], borderWidth: 0 }] },
-            options: { plugins: { legend: { display: false } } }
-        });
-    }
-
-    function kirimKeGmail() {
-        let report = "--- LAPORAN JURNAL KEUANGAN ---\n";
-        financeData.forEach((item, i) => {
-            report += `${i+1}. ${item.date} | ${item.desc} | Rp ${item.amt.toLocaleString()} (${item.type})\n`;
-        });
-        window.location.href = `mailto:rezkyalfayed56@gmail.com?subject=Jurnal Bulanan&body=${encodeURIComponent(report)}`;
-    }
-
-    renderFinance();
+    render();
 </script>
 </body>
 </html>
