--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>SMC ULTRA-PRECISION | LIVE</title>
+    <title>SMC ULTRA-PRECISION | FIXED</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
@@ -10,53 +10,57 @@
         body { background: #000; color: #fff; font-family: sans-serif; margin: 0; padding: 10px; overflow: hidden; }
         .grid { display: grid; grid-template-columns: 280px 1fr 280px; gap: 10px; height: 95vh; }
         .panel { background: #0a0a0a; border: 1px solid #1a1a1a; border-radius: 8px; padding: 15px; display: flex; flex-direction: column; }
-        #price { font-size: 45px; font-weight: bold; text-align: center; color: #ffd700; }
+        #price { font-size: 45px; font-weight: bold; text-align: center; color: #ffd700; text-shadow: 0 0 10px rgba(255,215,0,0.5); }
         .sig-box { padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; border: 1px solid #333; margin: 10px 0; }
         .buy { border-color: #00ff88; color: #00ff88; background: rgba(0,255,136,0.1); }
         .sell { border-color: #ff4444; color: #ff4444; background: rgba(255,68,68,0.1); }
-        input { background: #111; border: 1px solid #333; color: #fff; padding: 10px; margin-bottom: 5px; width: 100%; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; border: none; cursor: pointer; border-radius: 5px; font-weight: bold; }
         .scroll { flex-grow: 1; overflow-y: auto; font-size: 11px; border-top: 1px solid #222; margin-top: 10px; }
     </style>
 </head>
 <body>
 <div class="grid">
     <div class="panel">
-        <div style="color:#ffd700; font-size: 10px;">FINANCE LEDGER</div>
         <h2 id="balance">Rp 0</h2>
-        <input type="text" id="desc" placeholder="Keterangan">
-        <input type="number" id="amt" placeholder="Jumlah (Rp)">
-        <button onclick="addTrans('IN')" style="background:#00ff88; color:#000; margin-bottom:5px;">INCOME (+)</button>
-        <button onclick="addTrans('OUT')" style="background:#ff4444; color:#fff;">EXPENSE (-)</button>
         <div id="hist" class="scroll"></div>
     </div>
     <div class="panel">
-        <div id="price">0000.00</div>
-        <div id="sig" class="sig-box">WAITING FOR DATA...</div>
+        <div id="price">LOADING...</div>
+        <div id="sig" class="sig-box">WAITING FOR TERMUX...</div>
         <div id="chart" style="height: 400px;"></div>
     </div>
     <div class="panel">
-        <div style="color:#ffd700; font-size: 10px;">SIGNAL ENGINE LOG</div>
         <div id="log" class="scroll"></div>
     </div>
 </div>
+
 <script>
+    // Konfigurasi Database Anda
     const conf = { databaseURL: "https://emas_murni-xau-default-rtdb.firebaseio.com" };
     firebase.initializeApp(conf);
     const db = firebase.database();
+
     const chart = LightweightCharts.createChart(document.getElementById('chart'), {
         layout: { backgroundColor: '#0a0a0a', textColor: '#d1d4dc' },
         grid: { vertLines: { color: '#111' }, horzLines: { color: '#111' } }
     });
     const candle = chart.addCandlestickSeries({ upColor: '#00ff88', downColor: '#ff4444' });
     let lastP = 0;
-    let records = JSON.parse(localStorage.getItem('fin_vfinal')) || [];
-    db.ref('live_monitor').on('value', (s) => {
-        const val = s.val();
-        if(!val || !val.price) return;
-        const p = val.price;
+
+    // Perbaikan Listener: Membaca folder 'live_monitor' ATAU 'root'
+    db.ref('/').on('value', (s) => {
+        const root = s.val();
+        // Cek apakah data ada di dalam 'live_monitor' atau langsung di root
+        const val = root.live_monitor ? root.live_monitor : root;
+        
+        if(!val || !val.price) {
+            document.getElementById('sig').innerText = "DATABASE EMPTY / WRONG PATH";
+            return;
+        }
+
+        const p = parseFloat(val.price);
         document.getElementById('price').innerText = p.toFixed(2);
         document.getElementById('price').style.color = p > lastP ? '#00ff88' : '#ff4444';
+
         if(lastP > 0 && p !== lastP) {
             const side = p > lastP ? 'BUY' : 'SELL';
             const sigEl = document.getElementById('sig');
@@ -64,28 +68,13 @@
             sigEl.className = "sig-box " + side.toLowerCase();
             document.getElementById('log').innerHTML = "<div>[" + new Date().toLocaleTimeString() + "] " + side + " @ " + p + "</div>" + document.getElementById('log').innerHTML;
         }
-        candle.update({ time: Math.floor(val.timestamp), open: p, high: p, low: p, close: p });
+
+        candle.update({ 
+            time: val.timestamp ? Math.floor(val.timestamp) : Math.floor(Date.now()/1000), 
+            open: p, high: p, low: p, close: p 
+        });
         lastP = p;
     });
-    function addTrans(type) {
-        const d = document.getElementById('desc').value;
-        const a = parseFloat(document.getElementById('amt').value);
-        if(!d || isNaN(a)) return;
-        records.push({ d, a, type });
-        localStorage.setItem('fin_vfinal', JSON.stringify(records));
-        render();
-    }
-    function render() {
-        let total = 0;
-        const h = document.getElementById('hist');
-        h.innerHTML = '';
-        records.forEach(i => {
-            total += (i.type === 'IN' ? i.a : -i.a);
-            h.innerHTML = "<div>" + i.d + ": Rp " + i.a.toLocaleString() + " (" + i.type + ")</div>" + h.innerHTML;
-        });
-        document.getElementById('balance').innerText = "Rp " + total.toLocaleString();
-    }
-    render();
 </script>
 </body>
 </html>
